# pystlink

./: .gitignore  MANIFEST.in  README.md  pystlink_api.py  setup.cfg
examples/: program_otp.py  program_srec_firmware.py  simple_flash_write.py  simple_read.py  small.srec
lib/: stm32l4.py
src/pystlink/: list_new_stm32.py  pystlink.py  pystlink_api.py  pystlink_test.py
src/pystlink/lib/: stlinkusb.py  stlinkv2.py  stm32.py  stm32fp.py  stm32fs.py  stm32h7.py  stm32l0.py  stm32l4.py
