[metadata]
name = pystlink
version = 0.0.7
author = Jordan Docker
author_email = jordan.docker@spotta.co
description = Python API for flashing and debugging STM32 devices using ST-LINK/V2 and ST-LINK/V3
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pavelrevak/pystlink
project_urls =
    Bug Tracker = https://github.com/pavelrevak/pystlink/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    pyusb

[options.packages.find]
where = src

[options.package_data]
bin = src/pystlink/bin/hi.txt

